# pyasync-example

./: .gitignore  README.md  pyproject.toml
src/pyasyncchat/: client.py  model.py  server.py
src/pyasyncchat/client/: __main__.py
src/pyasyncchat/model/: __init__.py
src/pyasyncchat/server/: __init__.py  __main__.py
