[tool.poetry]
name = "pyasync-example"
version = "0.1.0"
description = ""
authors = ["Richard Liebscher <r1tschy@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
websockets = "^9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
